miniextendr-macros/tests/ui/impl_generic_block.stderr
error: generic impl blocks are not yet supported by #[miniextendr]
 --> tests/ui/impl_generic_block.rs:8:5
  |
8 | impl<T: Clone> Wrapper<T> {
  |     ^^^^^^^^^^
